--- a/ProgNewsWebSite/Areas/Admin/Views/PageGroups/Index.cshtml
+++ b/ProgNewsWebSite/Areas/Admin/Views/PageGroups/Index.cshtml
@@ -25,10 +25,10 @@
             </td>
             <td>
                 <a class="btn btn-sm btn-warning" onclick="editGroup(@item.GroupID)">
-                    <i class="glyphicon glyphicon-edit"></i>
+                    ویرایش
                 </a>
                 <a class="btn btn-sm btn-danger" onclick="deleteGroup(@item.GroupID)">
-                    <i class="glyphicon glyphicon-trash"></i>
+                    حذف
                 </a>
             </td>
         </tr>
