--- a/ProgNewsWebSite/Areas/Admin/Views/PageGroups/Delete.cshtml
+++ b/ProgNewsWebSite/Areas/Admin/Views/PageGroups/Delete.cshtml
@@ -3,13 +3,9 @@
 @{
     ViewBag.Title = "Delete";
 }
-
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>آیا از حذف  @Model.GroupTitle مطمعن هستید؟</h3>
 <div>
-    <h4>PageGroup</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.GroupTitle)
@@ -25,8 +21,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="حذف گروه" class="btn btn-danger" /> 
         </div>
     }
 </div>
