--- a/ProgNewsWebSite/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ProgNewsWebSite/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>پنل ادمین</title>
     <link href="~/Content/bootstrap-rtl.css" rel="stylesheet" />
 
 </head>
@@ -16,7 +16,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("پنل ادمین", "Index", "Admin", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("صفحه اصلی وبسایت", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -24,6 +25,7 @@
             </div>
         </div>
     </div>
+
 
     <div class="container body-content">
         @RenderBody()
