Add news queries for last news and by group ID
Added LastNewsReturn and ShowPageByGroupId methods to IPageRepository and PageRepository to support fetching the latest news and news by group ID. These changes enable new views and controller actions for displaying last news and group-specific news.

--- a/ProgNewsWebSite/Views/Home/Slider.cshtml
+++ b/ProgNewsWebSite/Views/Home/Slider.cshtml
@@ -22,5 +22,5 @@
 
         @*end each item*@
     </div>
-        <a href="" class="news-archive"> <i class="icons icon-doc-1"></i> آرشیو کامل خبرها </a>
+        <a href="/Archive" class="news-archive"> <i class="icons icon-doc-1"></i> آرشیو کامل خبرها </a>
     </div>
