--- a/ProgNewsWebSite/Views/News/ShowGroupInMenu.cshtml
+++ b/ProgNewsWebSite/Views/News/ShowGroupInMenu.cshtml
@@ -3,6 +3,6 @@
 <ul>
     @foreach (var item in Model)
     {
-        <li><a href="">@item.GroupTitle</a></li>
+        <li><a href="/Group/@item.GroupID/@item.GroupTitle">@item.GroupTitle</a></li>
     }
 </ul>
