fix the comment bug
i just miss type "ajax"

--- a/ProgNewsWebSite/Views/News/ShowNews.cshtml
+++ b/ProgNewsWebSite/Views/News/ShowNews.cshtml
@@ -95,7 +95,7 @@
 <script>
     
     function addComment() {
-        $.ajex({
+        $.ajax({
             url: "/News/AddComment/@Model.PageID",
             type: "Get",
             data: { name: $("#txtName").val(), email: $("#txtEmail").val(), comment: $("#txtComment").val() }
