Replace ASP.NET Identity with custom admin login
Removed ASP.NET Identity and related authentication files, including controllers, views, and configuration. Introduced a custom admin login system using a new AdminLogin model, repository, and view model. Added AccountController for handling login and sign out, updated admin controllers to require authorization, and refactored the login view to use the new model. Updated Entity Framework context and migrations to support the new AdminLogin table.

--- a/ProgNewsWebSite/Views/Shared/_DefaultLayout.cshtml
+++ b/ProgNewsWebSite/Views/Shared/_DefaultLayout.cshtml
@@ -66,10 +66,19 @@
             <ul>
                 <li><a href="/"> صفحه اصلی </a></li>
                 <li><a href="/Archive"> آرشیو خبرها </a></li>
-                <li><a href=""> ثبت نام </a></li>
-                <li><a href=""> ورود به سایت </a></li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li><a href=""> خوش آمدید @User.Identity.Name </a></li>
+                    <li><a href="/Admin"> پنل مدیریت محتوا</a></li>
+                    <li><a href="/Account/SignOut"> خروج از اکانت </a></li>
+                }
+                else
+                {
+
+                    <li><a href="/Account/Login"> ورود به سایت </a></li>
+                }
                 <li>
-                    @Html.Action("ShowGroupInMenu","News")
+                    @Html.Action("ShowGroupInMenu", "News")
                 </li>
             </ul>
         </div>
@@ -81,10 +90,10 @@
 
             <aside class="col-md-4 col-sm-12 col-xs-12 pull-right">
 
-                @Html.Action("ShowGroups","News")
-                
+                @Html.Action("ShowGroups", "News")
+
                 <!-- most views news -->
-                @Html.Action("TopNews","News")
+                @Html.Action("TopNews", "News")
                 <!-- end most views news -->
             </aside>
 
@@ -92,7 +101,6 @@
             <div class="col-md-8 col-sm-12 col-xs-12 ">
 
                 <!-- slider -->
-
                 <!-- End slider -->
                 @RenderBody()
             </div>
@@ -137,5 +145,6 @@
     <script src="/Content/js/bootstrap.min.js"></script>
     <script src="/Content/js/owl.carousel.js"></script>
     <script src="/Content/js/script.js"></script>
+    @RenderSection("Scripts", false)
 </body>
 </html>
